--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -79,7 +79,7 @@ jobs:
        
   publish_blobber:
     needs: build_blobber
-    runs-on: [self-hosted]
+    runs-on: [ conductor-test ]
     steps:
       - name: Set GITHUB_ENV
         run: |
@@ -153,7 +153,7 @@ jobs:
        
   publish_validator:
     needs: build_validator
-    runs-on: [self-hosted]
+    runs-on: [ conductor-test ]
     steps:
       - name: Set GITHUB_ENV
         run: |
@@ -185,8 +185,7 @@ jobs:
           docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
 
   system-tests:
-#    needs: [publish_blobber, publish_validator]
-    needs: [publish_blobber]
+    needs: [publish_blobber, publish_validator]
     runs-on: [ tests-suite ]
     steps:
       - name: Set GITHUB_ENV
@@ -206,8 +205,7 @@ jobs:
           miner_image:  staging
           sharder_image: staging
           blobber_image: ${{ env.TAG }}-${{ env.SHORT_SHA }}
-#          validator_image: ${{ env.TAG }}-${{ env.SHORT_SHA }}
-          validator_image: staging
+          validator_image: ${{ env.TAG }}-${{ env.SHORT_SHA }}
           zbox_image: staging
           zblock_image: staging
           zdns_image: staging
