--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -72,7 +72,7 @@ jobs:
         description: "System tests running"
         state: "pending"
         repository: ${{ github.repository }}
-        context: "Dockerize / system-tests (pull_request)"
+        context: "system-tests"
         target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -118,7 +118,7 @@ jobs:
         description: "System tests success"
         state: ${{ job.status }}
         repository: ${{ github.repository }}
-        context: "Dockerize / system-tests (pull_request)"
+        context: "system-tests"
         target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -131,7 +131,7 @@ jobs:
         description: "System tests failure"
         state: ${{ job.status }}
         repository: ${{ github.repository }}
-        context: "Dockerize / system-tests (pull_request)"
+        context: "system-tests"
         target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
