--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -1,4 +1,4 @@
-name: Dockerize
+name: Dockerize-and-system-test
 
 on:
   push: 
@@ -188,7 +188,26 @@ jobs:
     needs: [publish_blobber, publish_validator]
     runs-on: [ tests-suite ]
     steps:
-      - name: Set GITHUB_ENV
+      - name: "Get current PR"
+        uses: jwalton/gh-find-current-pr@v1
+        id: findPr
+        with:
+          github-token: ${{ github.token }}
+
+      - name: "Set PR Status Pending"
+        uses: niteoweb/pull_request_status_action@v1.0.0
+        if: steps.findPr.outputs.number
+        with:
+          pr_number: ${{ steps.findPr.outputs.pr }}
+          description: "System tests running with default config..."
+          state: "pending"
+          repository: ${{ github.repository }}
+          context: "0Chain System Tests"
+          target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: "Setup"
         run: |
           echo "Workflow is called: [${{ github.workflow }}]"
           echo "SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)" >> $GITHUB_ENV
@@ -227,3 +246,29 @@ jobs:
           archive_results: true
           run_flaky_tests: false
           retry_failures: true
+
+      - name: "Set PR Status Success"
+        if: ${{ success() && steps.findPr.outputs.number }}
+        uses: niteoweb/pull_request_status_action@v1.0.0
+        with:
+          pr_number: ${{ steps.findPr.outputs.pr }}
+          description: "System tests with default config completed successfully"
+          state: ${{ job.status }}
+          repository: ${{ github.repository }}
+          context: "0Chain System Tests"
+          target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: "Set PR Status Failed"
+        if: ${{ always() && failure() && steps.findPr.outputs.number }}
+        uses: niteoweb/pull_request_status_action@v1.0.0
+        with:
+          pr_number: ${{ steps.findPr.outputs.pr }}
+          description: "System tests with default config failed. Try running manually with more specific config"
+          state: ${{ job.status }}
+          repository: ${{ github.repository }}
+          context: "0Chain System Tests"
+          target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
