--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -54,7 +54,6 @@ jobs:
     - name: "Setup Test Run"
       run: |
         echo "SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)" >> $GITHUB_ENV
-        echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
         echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
         echo "NETWORK_URL=$(echo dev-${RUNNER_NAME:(-1)}.devnet-0chain.net)" >> $GITHUB_ENV
         echo "RUNNER_NUMBER=${RUNNER_NAME:(-1)}" >> $GITHUB_ENV
@@ -71,28 +70,32 @@ jobs:
             echo "BLOBBER_IMAGE=${{ env.TAG }}-${{ env.SHORT_SHA }}" >> $GITHUB_ENV
           else
             echo "blobber docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
-            echo "Checking blobber image [merge-${{ env.SHORT_SHA }}] is present..."
-            docker pull 0chaindev/blobber:merge-${{ env.SHORT_SHA }} || { echo "Docker image for blobber commit sha [${{ env.SHORT_SHA }}] could not be found for either this branch or PR. Please publish image manually and try again." && exit 1; }
-            echo "blobber docker image found for  [merge-${{ env.SHORT_SHA }}]"
-            echo "BLOBBER_IMAGE=merge-${{ env.SHORT_SHA }}" >> $GITHUB_ENV
+            git fetch origin pull/${{ steps.findPr.outputs.pr }}/merge:merge && git checkout merge
+            MERGE_SHORT_SHA=$(git rev-parse HEAD | head -c 8)
+            echo "Checking blobber image [merge-$MERGE_SHORT_SHA] is present..."
+            docker pull 0chaindev/blobber:merge-$MERGE_SHORT_SHA || { echo "Docker image for blobber could not be found for either branch commit sha [${{ env.SHORT_SHA }}] or PR merge commit sha [$MERGE_SHORT_SHA]. Please publish image manually and try again." && exit 1; }
+            echo "blobber docker image found for  [merge-$MERGE_SHORT_SHA]"
+            echo "BLOBBER_IMAGE=merge-$MERGE_SHORT_SHA" >> $GITHUB_ENV
         fi
 
     - name: "Find validator image"
       run: |
         exit_code=0
-        echo "Checking validator image [${{ env.TAG }}-${{ env.SHORT_SHA }}] is present..."
-        docker pull 0chaindev/validator:${{ env.TAG }}-${{ env.SHORT_SHA }} || exit_code=$?
+        echo "Checking valiator image [${{ env.TAG }}-${{ env.SHORT_SHA }}] is present..."
+        docker pull 0chaindev/valiator:${{ env.TAG }}-${{ env.SHORT_SHA }} || exit_code=$?
 
         if [[ $exit_code == 0 ]];
           then
-            echo "validator docker image found for  [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
+            echo "valiator docker valiator image found for  [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
             echo "VALIDATOR_IMAGE=${{ env.TAG }}-${{ env.SHORT_SHA }}" >> $GITHUB_ENV
           else
-            echo "validator docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
-            echo "Checking validator image [merge-${{ env.SHORT_SHA }}] is present..."
-            docker pull 0chaindev/validator:merge-${{ env.SHORT_SHA }} || { echo "Docker image for validator commit sha [${{ env.SHORT_SHA }}] could not be found for either this branch or PR. Please publish image manually and try again." && exit 1; }
-            echo "validator docker image found for [merge-${{ env.SHORT_SHA }}]"
-            echo "VALIDATOR_IMAGE=merge-${{ env.SHORT_SHA }}" >> $GITHUB_ENV
+            echo "valiator docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
+            git fetch origin pull/${{ steps.findPr.outputs.pr }}/merge:merge && git checkout merge
+            MERGE_SHORT_SHA=$(git rev-parse HEAD | head -c 8)
+            echo "Checking valiator image [merge-$MERGE_SHORT_SHA] is present..."
+            docker pull 0chaindev/valiator:merge-$MERGE_SHORT_SHA || { echo "Docker image for valiator could not be found for either branch commit sha [${{ env.SHORT_SHA }}] or PR merge commit sha [$MERGE_SHORT_SHA]. Please publish image manually and try again." && exit 1; }
+            echo "valiator docker image found for  [merge-$MERGE_SHORT_SHA]"
+            echo "VALIDATOR_IMAGE=merge-$MERGE_SHORT_SHA" >> $GITHUB_ENV
         fi
     
     - name: "Set PR Status Pending"
