--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -260,7 +260,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
 
       - name: "Set PR Status Failed"
-        if: ${{ always() && failure() && steps.findPr.outputs.number }}
+        if: ${{ failure() && steps.findPr.outputs.number }}
         uses: niteoweb/pull_request_status_action@v1.0.0
         with:
           pr_number: ${{ steps.findPr.outputs.pr }}
