--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -11,14 +11,6 @@ on:
         description: 'system_tests branch. Containing the tests you wish to run'
         default: 'master'
         required: true
-       blobber_image:
-        description: 'blobber DOCKER IMAGE to deploy'
-        default: 'staging'
-        required: true
-       validator_image:
-        description: 'validator DOCKER IMAGE to deploy'
-        default: 'staging'
-        required: true
        zbox_cli_branch:
         description: '0Box CLI (branch or commit SHA) which the tests will use'
         default: 'staging'
@@ -50,29 +42,81 @@ on:
 jobs:
   system-tests:  
     runs-on: [ tests-suite ]
-    timeout-minutes: 40
+    timeout-minutes: 90
     steps:
       
     - name: "Get current PR"
       uses: jwalton/gh-find-current-pr@v1
       id: findPr
       with:
-        github-token: ${{ github.token }} 
-        
+        github-token: ${{ github.token }}
+
     - name: "Setup Test Run"
       run: |
+        echo "SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)" >> $GITHUB_ENV
+        echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
         echo "NETWORK_URL=$(echo dev-${RUNNER_NAME:(-1)}.devnet-0chain.net)" >> $GITHUB_ENV
         echo "RUNNER_NUMBER=${RUNNER_NAME:(-1)}" >> $GITHUB_ENV
+
+    - name: "Check blobber image has been published"
+      if: ${{ github.event.inputs.skip_tests == 'FALSE' }}
+      run: |
+        exit_code=0
+        echo "Checking blobber image [${{ env.TAG }}-${{ env.SHORT_SHA }}] is present..."
+        docker pull 0chaindev/blobber:${{ env.TAG }}-${{ env.SHORT_SHA }} || exit_code=$?
+
+        if [[ $exit_code == 0 ]];
+          then
+            echo "blobber docker blobber image found for  [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
+            echo "BLOBBER_IMAGE=${{ env.TAG }}-${{ env.SHORT_SHA }}" >> $GITHUB_ENV
+          else
+            if [ -z "${{ steps.findPr.outputs.pr }}" ];
+              then
+                echo "blobber docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}] and PR not raised so will not check for PR merge image. Please publish image manually." && exit 1;
+            fi
+            echo "blobber docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
+            git fetch origin pull/${{ steps.findPr.outputs.pr }}/merge:merge && git checkout merge
+            MERGE_SHORT_SHA=$(git rev-parse HEAD | head -c 8)
+            echo "Checking blobber image [merge-$MERGE_SHORT_SHA] is present..."
+            docker pull 0chaindev/blobber:merge-$MERGE_SHORT_SHA || { echo "Docker image for blobber could not be found for either branch commit sha [${{ env.SHORT_SHA }}] or PR merge commit sha [$MERGE_SHORT_SHA]. Please publish image manually and try again." && exit 1; }
+            echo "blobber docker image found for  [merge-$MERGE_SHORT_SHA]"
+            echo "BLOBBER_IMAGE=merge-$MERGE_SHORT_SHA" >> $GITHUB_ENV
+        fi
+
+    - name: "Check validator image has been published"
+      if: ${{ github.event.inputs.skip_tests == 'FALSE' }}
+      run: |
+        exit_code=0
+        echo "Checking valiator image [${{ env.TAG }}-${{ env.SHORT_SHA }}] is present..."
+        docker pull 0chaindev/validator:${{ env.TAG }}-${{ env.SHORT_SHA }} || exit_code=$?
+
+        if [[ $exit_code == 0 ]];
+          then
+            echo "valiator docker valiator image found for  [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
+            echo "VALIDATOR_IMAGE=${{ env.TAG }}-${{ env.SHORT_SHA }}" >> $GITHUB_ENV
+          else
+            if [ -z "${{ steps.findPr.outputs.pr }}" ];
+              then
+                echo "valiator docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}] and PR not raised so will not check for PR merge image. Please publish image manually." && exit 1;
+            fi
+            echo "valiator docker image NOT found for [${{ env.TAG }}-${{ env.SHORT_SHA }}]"
+            git fetch origin pull/${{ steps.findPr.outputs.pr }}/merge:merge && git checkout merge
+            MERGE_SHORT_SHA=$(git rev-parse HEAD | head -c 8)
+            echo "Checking valiator image [merge-$MERGE_SHORT_SHA] is present..."
+            docker pull 0chaindev/validator:merge-$MERGE_SHORT_SHA || { echo "Docker image for valiator could not be found for either branch commit sha [${{ env.SHORT_SHA }}] or PR merge sha [$MERGE_SHORT_SHA]. Please publish image manually and try again." && exit 1; }
+            echo "valiator docker image found for  [merge-$MERGE_SHORT_SHA]"
+            echo "VALIDATOR_IMAGE=merge-$MERGE_SHORT_SHA" >> $GITHUB_ENV
+        fi
     
     - name: "Set PR Status Pending"
       uses: niteoweb/pull_request_status_action@v1.0.0
       if: steps.findPr.outputs.number
       with:
         pr_number: ${{ steps.findPr.outputs.pr }}
-        description: "System tests running"
+        description: "Manual system tests running"
         state: "pending"
         repository: ${{ github.repository }}
-        context: ${{ github.workflow }}
+        context: "0Chain System Tests"
         target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -85,8 +129,8 @@ jobs:
         teardown_condition: "TESTS_PASSED"
         miner_image:  ${{ github.event.inputs.miner_image }}
         sharder_image: ${{ github.event.inputs.sharder_image }}
-        blobber_image: ${{ github.event.inputs.blobber_image }}
-        validator_image: ${{ github.event.inputs.validator_image }}
+        blobber_image: ${{ env.BLOBBER_IMAGE }}
+        validator_image: ${{ env.VALIDATOR_IMAGE }}
         zbox_image: ${{ github.event.inputs.zbox_image }}
         zblock_image: ${{ github.event.inputs.zblock_image }}
         zdns_image: staging
@@ -115,10 +159,10 @@ jobs:
       uses: niteoweb/pull_request_status_action@v1.0.0
       with:
         pr_number: ${{ steps.findPr.outputs.pr }}
-        description: "System tests success"
+        description: "Manual system tests success"
         state: ${{ job.status }}
         repository: ${{ github.repository }}
-        context: ${{ github.workflow }}
+        context: "0Chain System Tests"
         target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -128,10 +172,10 @@ jobs:
       uses: niteoweb/pull_request_status_action@v1.0.0
       with:
         pr_number: ${{ steps.findPr.outputs.pr }}
-        description: "System tests failure"
+        description: "Manual system tests failure"
         state: ${{ job.status }}
         repository: ${{ github.repository }}
-        context: ${{ github.workflow }}
+        context: "0Chain System Tests"
         target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
