trying system test with copy-zbox branch.
Signed-off-by: Pradip Parmar <pradip@alfa-creator.com>

--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -13,7 +13,7 @@ on:
         required: true
        zbox_cli_branch:
         description: '0Box CLI (branch or commit SHA) which the tests will use'
-        default: 'staging'
+        default: 'bug/issue-401-copy-file-when-no-dir'
         required: true
        zwallet_cli_branch:
         description: '0Wallet CLI (branch or commit SHA) which the tests will use'
