updated testcase branch to validate testcase changes.
Signed-off-by: Pradip Parmar <pradip@alfa-creator.com>

--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -9,7 +9,7 @@ on:
     inputs:
        system_tests_branch:
         description: 'system_tests branch. Containing the tests you wish to run'
-        default: 'master'
+        default: 'bug/blobber_401_copy_file_to_non_existing_dir'
         required: true
        zbox_cli_branch:
         description: '0Box CLI (branch or commit SHA) which the tests will use'
