system testcase branch name change
Signed-off-by: Pradip Parmar <pradip@alfa-creator.com>

--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -9,11 +9,11 @@ on:
     inputs:
        system_tests_branch:
         description: 'system_tests branch. Containing the tests you wish to run'
-        default: 'bug/blobber_401_copy_file_to_non_existing_dir'
+        default: 'master'
         required: true
        zbox_cli_branch:
         description: '0Box CLI (branch or commit SHA) which the tests will use'
-        default: 'bug/issue-401-copy-file-when-no-dir'
+        default: 'staging'
         required: true
        zwallet_cli_branch:
         description: '0Wallet CLI (branch or commit SHA) which the tests will use'
