--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -13,7 +13,7 @@ on:
         required: true
        zbox_cli_branch:
         description: '0Box CLI (branch or commit SHA) which the tests will use'
-        default: 'feature/issue-450-name-in-allocations'
+        default: 'staging'
         required: true
        zwallet_cli_branch:
         description: '0Wallet CLI (branch or commit SHA) which the tests will use'
