--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -123,3 +123,10 @@ integration_tests:
   # lock_interval used by nodes to request server to connect to blockchain
   # after start
   lock_interval: 1s
+
+  #disk balancer
+  min_disk_size: 32212254000
+  check_disk_timeout: 60000000000
+  use_system_disk: false
+  mount_point: /mnt
+  strategy: min_size_first
