fix concurrency group

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -1,7 +1,7 @@
 name: "Build & Publish Docker Image"
 
 concurrency:
-  group: "${{ github.ref }}"
+  group: "publish-${{ github.ref }}"
   cancel-in-progress: true
 
 on:
