--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,9 @@
 name: Tests
 
 concurrency:
-  group: "${{ github.ref }}"
+  group: "tests-${{ github.ref }}"
   cancel-in-progress: true
-  
+
 on:
   push: 
     branches:
