notify all PRs on manual system tests (#478)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,9 @@
 name: Tests
 
+concurrency:
+  group: "tests-${{ github.ref }}"
+  cancel-in-progress: true
+
 on:
   push: 
     branches:
@@ -12,7 +16,7 @@ on:
 jobs:
   unit_tests:
     name: "Unit Tests"
-    runs-on: [self-hosted, load-test]
+    runs-on: [self-hosted, build]
     steps:
       - name: Setup go 1.17
         uses: actions/setup-go@v2
@@ -68,7 +72,7 @@ jobs:
 
   golangci:
     name: lint
-    runs-on: [self-hosted, tests-suite]
+    runs-on: [self-hosted, build]
     steps:
       - name: Setup go 1.17
         uses: actions/setup-go@v2
@@ -83,7 +87,7 @@ jobs:
           args: --timeout=2m0s
 
   buf-build:
-    runs-on: [self-hosted, tests-suite]
+    runs-on: [self-hosted, build]
     steps:
       - name: Check out code
         uses: actions/checkout@master
