fix(gosdk): upgraded gosdk with 20211230004341-97405e30f6ea (#481)
* fix(gosdk): upgraded gosdk with 20211230004341-97405e30f6ea

* fix(devops): updated pull request template

* fix(devops): fixed runs-on

* fix(gomod):go mod tidy

* fix(test):fixed rename_test

* fix(devops): improved tests.yml

* fix(devops): updated runs-on for docker build

* fix(devops): improved tests.yml

* fix(devops): improved tag for pr

* fix(devops): improved tag for pr

* fix(devops): improved docker image tag for pr

* fix(devops): improved docker image tag for pr

* fix(devops): improved docker image tag for pr

* fix(devops): fixed invalid syntax on tests.yml

* fix(gomod): upgrade gosdk

* fix(devops): fixed job names for check

* fix(devops):skip-go-installation in golangcli

* fix(devops):removed needs from intergation-tests

* fix(devops):added cache for go/pkg

* fix(devops):fixed syntax on yml

* fix(devops):fixed syntax on yml

* fix(devops):improved tests.yml

* fix(devops):updated runs-on

* fix(devops): removed cache actions for go/pkg. download it from github is not faster than goproxy

* fix(devops):run system_test with fix/docker_image_tag_for_pr

* fix(devops): improved get tag script

* fix(devops): simplied job names for dockerize

* fix(devops): reverted system_tests to master

* fix(devops): improved dockerize, pr template and upgrade gosdk with 3d69e6515423408ebbf99563a73d1996f73ea78c:

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -9,7 +9,6 @@ on:
     branches:
       - staging
     tags: 
-      - '*'
   pull_request:
 
   workflow_dispatch:
@@ -20,15 +19,34 @@ env:
   VALIDATOR_REGISTRY: ${{ secrets.VALIDATOR_REGISTRY }}
 
 jobs:
-  build_and_publish_blobber:
+  blobber:
     runs-on: [self-hosted, build]
     steps:
-      - name: Set GITHUB_ENV
+      - name: Set docker image tag 
         run: |
+          if [[ "${{github.ref}}" == refs/pull/* ]]; then
+            tag=${GITHUB_REF/\/merge/}
+            echo "TAG=$(echo pr-${tag:10})" >> $GITHUB_ENV
+          else
+            echo "TAG=$(echo ${GITHUB_REF#refs/*/} | sed 's/\//-/g')" >> $GITHUB_ENV
+          fi
+
           echo "BRANCH=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF)" >> $GITHUB_ENV
-          echo "TAG=$(([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF) | sed 's/\//-/g')" >> $GITHUB_ENV
           echo "SHA=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo $GITHUB_SHA || echo '${{ github.event.pull_request.head.sha }}')" >> $GITHUB_ENV
-      
+
+      - name: Setup go 1.17
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.17' # The Go version to download (if necessary) and use.
+
+      # - uses: actions/cache@v2
+      #   with:
+      #     path: ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-go-
+
+
       - name: Clone blobber
         uses: actions/checkout@v1
 
@@ -53,15 +71,33 @@ jobs:
           docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA
           docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA  || { sleep 10 && docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA; }
 
-  build_and_publish_validator:
+  validator:
     runs-on: [self-hosted, build]
     steps:
-      - name: Set GITHUB_ENV
+      - name: Set docker image tag 
         run: |
+          if [[ "${{github.ref}}" == refs/pull/* ]]; then
+            tag=${GITHUB_REF/\/merge/}
+            echo "TAG=$(echo pr-${tag:10})" >> $GITHUB_ENV
+          else
+            echo "TAG=$(echo ${GITHUB_REF#refs/*/} | sed 's/\//-/g')" >> $GITHUB_ENV
+          fi
+
           echo "BRANCH=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF)" >> $GITHUB_ENV
-          echo "TAG=$(([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF) | sed 's/\//-/g')" >> $GITHUB_ENV
           echo "SHA=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo $GITHUB_SHA || echo '${{ github.event.pull_request.head.sha }}')" >> $GITHUB_ENV
-      
+
+      - name: Setup go 1.17
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.17' # The Go version to download (if necessary) and use.
+
+      # - uses: actions/cache@v2
+      #   with:
+      #     path: ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-go-
+
       - name: Clone blobber
         uses: actions/checkout@v1
 
@@ -88,7 +124,7 @@ jobs:
 
   system-tests:
     if: github.event_name != 'workflow_dispatch'
-    needs: [build_and_publish_blobber, build_and_publish_validator]
+    needs: [blobber, validator]
     runs-on: [ tests-suite ]
     steps:
       - name: "Get current PR"
@@ -112,9 +148,15 @@ jobs:
 
       - name: "Setup"
         run: |
+          if [[ "${{github.ref}}" == refs/pull/* ]]; then
+            tag=${GITHUB_REF/\/merge/}
+            echo "TAG=$(echo pr-${tag:10})" >> $GITHUB_ENV
+          else
+            echo "TAG=$(echo ${GITHUB_REF#refs/*/} | sed 's/\//-/g')" >> $GITHUB_ENV
+          fi
+
           echo "BRANCH=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF)" >> $GITHUB_ENV
           echo "SHORT_SHA=$(([ -z '${{ github.event.pull_request.head.sha }}' ] && echo $GITHUB_SHA || echo '${{ github.event.pull_request.head.sha }}') | head -c 8)" >> $GITHUB_ENV
-          echo "TAG=$(([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF) | sed 's/\//-/g')" >> $GITHUB_ENV
           echo "NETWORK_URL=$(echo dev-${RUNNER_NAME:(-1)}.devnet-0chain.net)" >> $GITHUB_ENV
           echo "RUNNER_NUMBER=${RUNNER_NAME:(-1)}" >> $GITHUB_ENV
 
