fix(gomod):upgraded grpc packages (#512)
* fix(gomod):upgraded grpc packages

* fix(gomod):upgraded gosdk

* fix(docker): removed debugging gcflags for compile optimizations

* fix(docker): don't use git on run docker image

* fix(docker): use alpine:3.14 instead of golang image for production

* fix(devops): added concurrency for benchmark

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,26 +1,24 @@
 name: Benchmark tests
 
+concurrency:
+  group: "benchmark-${{ github.ref }}"
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ master, staging ]
 
 jobs:
   benchmark:
-    runs-on: [self-hosted, load-test]
+    runs-on: [self-hosted, conductor-test]
     steps:
-      - name: Setup go 1.16
+      - name: Setup go 1.17
         uses: actions/setup-go@v2
         with:
-          go-version: '1.16' # The Go version to download (if necessary) and use.
+          go-version: '1.17' # The Go version to download (if necessary) and use.
 
       - name: Clone blobber
         uses: actions/checkout@v2
-
-      - name: Set GITHUB_ENV
-        run: |
-            echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-            echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
-            echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
 
       - name: Run benchmark
         run: CGO_ENABLED=1 go test -tags bn256 -benchmem -run="BenchmarkUploadFile*" -bench="BenchmarkUploadFile*"   ./... | tee benchmark.txt
