refactoring test.yaml for correct work of tests on git server.

--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -125,8 +125,8 @@ integration_tests:
   lock_interval: 1s
 
   #disk balancer
-  min_disk_size: 32212254000
+  min_disk_size: 1073741824
   check_disk_timeout: 60000000000
   use_system_disk: false
-  mount_point: /mnt
+  mount_point: /mnt/
   strategy: min_size_first
